# Payroll

./: CMakeLists.txt  README.md
include/: employee.h  payroll.h
src/: main.cpp
